--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
       let sql = `SELECT * FROM short_rpt `;
       if (query) {
-        sql += `WHERE phone LIKE '%${query}%' OR engineno LIKE '%${query}%' `;
+        sql += `WHERE Contact LIKE '%${query}%' OR EngineNo LIKE '%${query}%' `;
       }
       sql += `LIMIT 100`;
 
@@ -217,3 +217,4 @@
   </script>
 </body>
 </html>
+
