--- a/index.html
+++ b/index.html
@@ -5,34 +5,69 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>SQLite Viewer</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 10px;
-      background: #f5f5f5;
+    * {
+      box-sizing: border-box;
     }
 
-    input {
+    body {
+      font-family: 'Segoe UI', Roboto, Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f2f2f2;
+      color: #333;
+    }
+
+    header {
+      position: sticky;
+      top: 0;
+      background: #ffffff;
+      padding: 16px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+      z-index: 10;
+    }
+
+    input[type="text"] {
       width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
+      padding: 12px 14px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
       font-size: 16px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+      transition: border-color 0.3s;
+    }
+
+    input[type="text"]:focus {
+      border-color: #0066cc;
+      outline: none;
+    }
+
+    #tableContainer {
+      padding: 10px;
     }
 
     table {
       width: 100%;
       border-collapse: collapse;
       background: white;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
 
     th, td {
-      padding: 10px;
-      border: 1px solid #ccc;
-      font-size: 14px;
+      padding: 12px 10px;
+      border-bottom: 1px solid #eee;
+      font-size: 15px;
+      text-align: left;
     }
 
     th {
-      background: #f0f0f0;
+      background: #fafafa;
+      font-weight: 600;
+    }
+
+    tr:last-child td {
+      border-bottom: none;
     }
 
     tr:hover {
@@ -40,9 +75,18 @@
     }
 
     button {
-      padding: 5px 10px;
+      padding: 6px 12px;
+      background-color: #007bff;
+      border: none;
+      border-radius: 6px;
+      color: white;
       font-size: 14px;
       cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background-color: #0056b3;
     }
 
     .modal-overlay {
@@ -57,52 +101,62 @@
     }
 
     .modal-content {
-      background: white;
-      border-radius: 12px;
+      background: #fff;
+      border-radius: 18px;
       padding: 20px;
-      width: 90%;
+      width: 92%;
       max-width: 600px;
       max-height: 85vh;
       overflow-y: auto;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      box-shadow: 0 10px 40px rgba(0,0,0,0.2);
       position: relative;
-      -webkit-overflow-scrolling: touch;
+      animation: fadeIn 0.3s ease;
     }
 
     .close-btn {
       position: absolute;
       top: 10px;
       right: 15px;
-      font-size: 24px;
+      font-size: 28px;
       cursor: pointer;
-      color: #999;
+      color: #888;
     }
 
     .modal-title {
       text-align: center;
-      font-size: 20px;
+      font-size: 22px;
       margin-bottom: 15px;
+      font-weight: 600;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
     }
 
     @media (max-width: 600px) {
       th, td {
-        font-size: 13px;
-        padding: 8px;
-      }
-
-      .modal-content {
-        padding: 15px;
+        font-size: 14px;
+        padding: 10px 8px;
       }
 
       .modal-title {
-        font-size: 18px;
+        font-size: 20px;
+      }
+
+      button {
+        font-size: 13px;
+        padding: 6px 10px;
       }
     }
   </style>
 </head>
 <body>
 
-  <input type="text" placeholder="Search by Phone or Engine No..." oninput="loadData(this.value)" />
+  <header>
+    <input type="text" placeholder="🔍 Search by Phone or Engine No..." oninput="loadData(this.value)" />
+  </header>
+
   <div id="tableContainer">Loading...</div>
 
   <!-- Detail Modal -->
@@ -114,7 +168,7 @@
     </div>
   </div>
 
-  <!-- Load SQLite & Logic -->
+  <!-- SQLite Logic -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.6.2/sql-wasm.js"></script>
   <script>
     let db = null;
@@ -127,7 +181,6 @@
 
         const buffer = await fetch("IMS.db?v=" + new Date().getTime()).then(res => res.arrayBuffer());
         db = new SQL.Database(new Uint8Array(buffer));
-
         await loadData();
       } catch (err) {
         alert("❌ SQLite not supported in this browser or Private Mode. Please disable Private Mode on iPhone.");
@@ -164,7 +217,7 @@
           row.forEach((cell, i) => {
             if (i !== 0) html += `<td>${cell}</td>`;
           });
-          html += `<td><button onclick="showDetail('${row[0]}')">🔍</button></td>`;
+          html += `<td><button onclick="showDetail('${row[0]}')">View</button></td>`;
           html += "</tr>";
         });
 
@@ -217,6 +270,3 @@
   </script>
 </body>
 </html>
-
-
-
