--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <div id="ConditiondetailModal" class="modal-overlay">
     <div class="modal-content">
       <span class="close-btn" onclick="ConditioncloseModal()">×</span>
-      <h2 class="modal-title">🧾 Ledger Details</h2>
+      <h2 class="modal-title">🧾 Condition Details</h2>
       <div id="ConditionmodalTableContainer"></div>
     </div>
   </div>
